# exceldatabase

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  python-publish.yml
excel_database/: database.py
exceldatabase/: __init__.py  database.py
tests/: test_database.py
