[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-database"
version = "1.0.1"
description = "Lightweight Excel-based CRUD database using openpyxl"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name="whitespaca", email="whitespaca@outlook.com" },
]
requires-python = ">=3.7"
dependencies = [
  "openpyxl>=3.0",
]
keywords = ["excel", "database", "crud", "openpyxl"]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]